# PI

./: CHANGELOG.md  CNAME  MANIFEST.in  Makefile  README.md  index.md  pyproject.toml  setup.cfg  setup.py
.azure-pipelines/: gpu-benchmark.yml  gpu-tests.yml  ipu-tests.yml
.github/: CODEOWNERS  CONTRIBUTING.md  prepare-nightly_version.py
.github/workflows/: ci_dockers.yml  ci_pkg-install.yml  ci_test-base.yml  ci_test-conda.yml  ci_test-full.yml  ci_test-slow.yml  events-nightly.yml  release-docker.yml  release-pypi.yml
dockers/: README.md
dockers/ipu-ci-runner/: Dockerfile
dockers/nvidia/: Dockerfile
dockers/release/: Dockerfile
dockers/tpu-tests/: Dockerfile  tpu_test_cases.jsonnet
docs/source/: api_references.rst  conf.py
legacy/: generate_checkpoints.sh  simple_classif_training.py
pi_ml/: __init__.py
pi_ml/accelerators/: __init__.py  accelerator.py  cpu.py  gpu.py  ipu.py  tpu.py
pi_ml/callbacks/: __init__.py  base.py  device_stats_monitor.py  early_stopping.py  finetuning.py  gpu_stats_monitor.py  gradient_accumulation_scheduler.py  lambda_function.py  lr_monitor.py  model_checkpoint.py  model_summary.py  prediction_writer.py  pruning.py  quantization.py  rich_model_summary.py  stochastic_weight_avg.py  timer.py  xla_stats_monitor.py
pi_ml/core/: __init__.py  datamodule.py  decorators.py  hooks.py  lightning.py  memory.py  optimizer.py  saving.py
pi_ml/distributed/: __init__.py  dist.py
pi_ml/lite/: __init__.py  lite.py  wrappers.py
pi_ml/loggers/: __init__.py  base.py  comet.py  csv_logs.py  mlflow.py  neptune.py  tensorboard.py  test_tube.py  wandb.py
pi_ml/loops/: __init__.py  base.py  fit_loop.py  utilities.py
pi_ml/overrides/: __init__.py  base.py  data_parallel.py  distributed.py  fairscale.py
pi_ml/plugins/: __init__.py
pi_ml/profiler/: __init__.py  advanced.py  base.py  pytorch.py  simple.py  xla.py
pi_ml/strategies/: __init__.py  bagua.py  ddp.py  ddp2.py  ddp_spawn.py  deepspeed.py  dp.py  fully_sharded.py  horovod.py  ipu.py  parallel.py  sharded.py  sharded_spawn.py  single_device.py  single_tpu.py  strategy.py  strategy_registry.py  tpu_spawn.py
pi_ml/trainer/: __init__.py  callback_hook.py  configuration_validator.py  data_loading.py  optimizers.py  states.py  supporters.py  trainer.py
pi_ml/tuner/: auto_gpu_select.py  batch_size_scaling.py  lr_finder.py  tuning.py
pi_ml/utilities/: __init__.py  apply_func.py  argparse.py  auto_restart.py  cli.py  cloud_io.py  data.py  deepspeed.py  device_parser.py  distributed.py  enums.py  fetching.py  imports.py  memory.py  meta.py  metrics.py  migration.py  model_helpers.py  model_summary.py  parsing.py  seed.py  upgrade_checkpoint.py  warnings.py  xla_device.py
pl_examples/: __init__.py  test_examples.py
pytorch_lightning/: setup_tools.py
requirements/: collect_env_details.py
tests/: README.md  conftest.py  standalone_tests.sh
(+321 files in other folders)
