[build-system]
requires = [
    "setuptools",
    "wheel",
]


[tool.isort]
known_first_party = [
    "docs",
    "pl_examples",
    "pi_ml",
    "tests",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"


[tool.black]
line-length = 120


[tool.mypy]
files = ["pi_ml"]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
# disable this rule as the Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"

# Ignore mypy errors for these files
# TODO: the goal is for this to be empty
[[tool.mypy.overrides]]
# the list can be generated with:
# mypy | tr ':' ' ' |  awk '{print $1}' | sort | uniq | sed 's/\.py//g' | sed 's|\/|\.|g' | xargs -I {} echo '"{}",'
module = [
    "pi_ml.callbacks.finetuning",
    "pi_ml.callbacks.model_checkpoint",
    "pi_ml.callbacks.progress.rich_progress",
    "pi_ml.callbacks.quantization",
    "pi_ml.callbacks.stochastic_weight_avg",
    "pi_ml.core.datamodule",
    "pi_ml.core.decorators",
    "pi_ml.core.lightning",
    "pi_ml.core.mixins.device_dtype_mixin",
    "pi_ml.core.saving",
    "pi_ml.distributed.dist",
    "pi_ml.loggers.base",
    "pi_ml.loggers.comet",
    "pi_ml.loggers.csv_logs",
    "pi_ml.loggers.mlflow",
    "pi_ml.loggers.neptune",
    "pi_ml.loggers.tensorboard",
    "pi_ml.loggers.test_tube",
    "pi_ml.loggers.wandb",
    "pi_ml.loops.epoch.training_epoch_loop",
    "pi_ml.strategies.ddp",
    "pi_ml.strategies.ddp2",
    "pi_ml.strategies.ddp_spawn",
    "pi_ml.strategies.deepspeed",
    "pi_ml.strategies.dp",
    "pi_ml.strategies.fully_sharded",
    "pi_ml.strategies.horovod",
    "pi_ml.strategies.ipu",
    "pi_ml.strategies.parallel",
    "pi_ml.strategies.sharded",
    "pi_ml.strategies.sharded_spawn",
    "pi_ml.strategies.single_device",
    "pi_ml.strategies.single_tpu",
    "pi_ml.strategies.tpu_spawn",
    "pi_ml.strategies.strategy",
    "pi_ml.profiler.advanced",
    "pi_ml.profiler.base",
    "pi_ml.profiler.pytorch",
    "pi_ml.profiler.simple",
    "pi_ml.trainer.callback_hook",
    "pi_ml.trainer.connectors.accelerator_connector",
    "pi_ml.trainer.connectors.callback_connector",
    "pi_ml.trainer.connectors.data_connector",
    "pi_ml.trainer.data_loading",
    "pi_ml.trainer.optimizers",
    "pi_ml.trainer.supporters",
    "pi_ml.trainer.trainer",
    "pi_ml.tuner.batch_size_scaling",
    "pi_ml.tuner.lr_finder",
    "pi_ml.tuner.tuning",
    "pi_ml.utilities.auto_restart",
    "pi_ml.utilities.data",
    "pi_ml.utilities.distributed",
    "pi_ml.utilities.meta",
]
ignore_errors = "True"
